--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,7 +4,8 @@
 @import 'typography';
 @import 'layout';
 @import 'forms';
-@import 'navbar';
+// @import 'navbar';
+@import 'experimental-navbar';
 @import 'images';
 @import 'posts-comments';
 @import 'weird-bootstrap-rules';
