--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,7 +15,7 @@
                 <label for="password">Password</label>
             </div>
 
-            <button type="submit">Log in</button>
+            <button class="button full-width-button" type="submit">Log in</button>
             <a class="help-link" href="/forgot-password">Forgot password?</a>
 
         </form>
