--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -22,6 +22,10 @@ $light-pink: lighten($sweet-red, 40%);
 $darker-pink: lighten($sweet-red, 30%); // 'Recently commented' notifications
 $dark-pink: lighten($sweet-red, 20%);
 
+$highlight: $lightest-pink;
+$placeholder: $dark-grey;
+$editor-background: #fff;
+
 $navbar-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 $dropdown-shadow: 0 3px 8px rgba(0, 0, 0, .25);
 $post-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
@@ -30,3 +34,10 @@ $button-shadow-hover: 1px 1px 1px rgba(0,0,0,0.2);
 
 $navigation-background: $background-white;
 $element-background: $background-white;
+$page-background: $background-grey;
+$aside-background: $lightest-pink;
+
+$navigation-border: $dark-pink;
+$navigation-text: $darkest-grey;
+$navigation-active-text: $dark-pink;
+$navigation-hover-text: $sweet-red;
