--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -397,7 +397,7 @@ section {
 
 .fixed-container>section {
     border: 1px solid $medium-grey;
-    background: $lightest-pink;
+    background: $aside-background;
     padding: 0.5rem 1rem 1rem 1rem;
     width: 350px;
     margin-bottom: 1rem;
@@ -497,7 +497,7 @@ section {
 }
 
 .user-list li:hover {
-    background: $lightest-pink;
+    background: $highlight;
 }
 
 .user-list img {
@@ -734,24 +734,6 @@ section {
     display: block;
 }
 
-/*badge is used for community tags and for the "following" notice next to usernames in booster lists*/
-.badge {
-    display: inline-block;
-    padding: .25em .4em;
-    font-size: 75%;
-    font-weight: 700;
-    line-height: 1;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: baseline;
-    border-radius: .25rem
-}
-
-.badge-secondary {
-    color: #fff;
-    background-color: #6c757d
-}
-
 /*modal stuff mostly stolen from bootstrap*/
 .modal {
     position: fixed;
@@ -829,7 +811,7 @@ section {
     flex-direction: column;
     width: 100%;
     pointer-events: auto;
-    background-color: #fff;
+    background-color: $element-background;
     background-clip: padding-box;
     border: 1px solid $medium-grey;
     border-radius: .3rem;
@@ -851,7 +833,7 @@ section {
     bottom: 0;
     left: 0;
     z-index: 1040;
-    background-color: #000;
+    background-color: $element-background;
 }
 
 .modal-title {
