--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -24,7 +24,7 @@ $dark-pink: lighten($sweet-red, 20%);
 
 $highlight: $lightest-pink;
 $placeholder: $dark-grey;
-$editor-background: #fff;
+$editor-background: lighten($lightest-grey, 2%);
 
 $navbar-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 $dropdown-shadow: 0 3px 8px rgba(0, 0, 0, .25);
