--- a/scss/_posts-comments.scss
+++ b/scss/_posts-comments.scss
@@ -396,6 +396,7 @@ article.comment>header .timestamp {
     white-space: nowrap;
     position: relative;
     top: 1px;
+    padding-left: 5px;
 }
 
 article.comment>.content {
