--- a/scss/_experimental-navbar.scss
+++ b/scss/_experimental-navbar.scss
@@ -1,19 +1,9 @@
 /*navbar, including notifications list stuff*/
 
-.navbar {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
+.navbar-positioner {
     display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    padding: .5rem 1rem
+    justify-content: center;
+    width: 100%;
 }
 
 .fixed-top {
@@ -30,17 +20,22 @@
     box-shadow: 5px 5px 10px rgba(0,0,0,0.3),-5px -5px 20px rgba(0,0,0,0.05);
     border-width: 1px;
     border-style: solid;
-    padding-bottom: 0.5rem;
-    padding-top: 0.5rem;
+    padding: .5rem 1.5rem;
     margin-top: 0.5rem;
-    margin-left: -550px;
-    margin-right: auto;
-    text-align: center;
     border-radius: 36px;
-    width: 1100px;
-    left: 50%;
-    text-align: center;
+    max-width: 95%;
     display: flex;
+
+    @media (max-width: 768px) {
+        margin-top: 0;
+        max-width: 100%;
+        border-radius: 0px;
+        border-top-width: 0px;
+        border-left-width: 0px;
+        border-right-width: 0px;
+        border-bottom-width: 2px;
+        padding: .5rem 1rem;
+    }
 }
 
 #navbarProfileImage.active {
@@ -59,7 +54,11 @@
     color: $navigation-text;
     background: $lightest-grey;
     border-color: $medium-grey;
-    width: 180px;
+    width: 140px;
+}
+
+#navbarSearchField:focus {
+    width: 220px;
 }
 
 #topNav .nav-link,
@@ -186,7 +185,7 @@
 
 #navbarMenuMobile {
     justify-content: space-between;
-    width: 100%;
+    width: 576px;
 }
 
 #navbarMenuDesktop {
