--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,93 +1,95 @@
-<nav class="navbar navbar-light fixed-top" id="topNav">
+<div class="navbar-positioner fixed-top">
+    <nav class="navbar navbar-light" id="topNav">
 
-  <ul class="nav" id="navbarMenuMobile" role='navigation'>
-    {{#if loggedIn }}
-      <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'home'}} active{{/eq}}" href="/home"><span class="navbar-icon-home"></span><span class="screenreader-text"> Home</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'notifications'}} active{{/eq}}" href="/notifications" id="notificationsPageLink"><span class="navbar-icon-notifications"></span><span class="screenreader-text"> Notifications </span><span class="notifications-count"></span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link{{#eq activePage loggedInUserData.username}} active{{/eq}}" href="/{{loggedInUserData.username}}"><img alt="Profile image for the user @{{ loggedInUserData.username}}" id="navbarProfileImage" src="{{#if loggedInUserData.imageEnabled}}/images/{{loggedInUserData.image}}{{else}}/images/cake.svg{{/if}}" {{#eq activePage loggedInUserData.username}}class="active"{{/eq}}/> <span class="screenreader-text"> Profile</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'communities'}} active{{/eq}}" href="/communities"><span class="navbar-icon-communities"></span><span class="screenreader-text"> Communities</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link{{#eq activePage 'search'}} active{{/eq}}" href="/search"><span class="navbar-icon-search"></span><span class="screenreader-text"> Search</span></a>
-      </li>
-    {{else}}
-      <li class="nav-item">
-        <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i><span class="nav-link-text not-hidden">log in</span></a>
-      </li>
-      <a href="/" id="sweetLogoLink">
-        <img src="/icons/bee-color.svg" id="sweetLogo" alt="sweet logo"/>
-      </a>
-      <li class="nav-item">
-        <a class="nav-link" href="/signup"><i class="fas fa-birthday-cake"></i> <span class="nav-link-text not-hidden">sign up</span></a>
-      </li>
-    {{/if}}
-  </ul>
+      <ul class="nav" id="navbarMenuMobile" role='navigation'>
+        {{#if loggedIn }}
+          <li class="nav-item">
+            <a class="nav-link{{#eq activePage 'home'}} active{{/eq}}" href="/home"><span class="navbar-icon-home"></span><span class="screenreader-text"> Home</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link{{#eq activePage 'notifications'}} active{{/eq}}" href="/notifications" id="notificationsPageLink"><span class="navbar-icon-notifications"></span><span class="screenreader-text"> Notifications </span><span class="notifications-count"></span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link{{#eq activePage loggedInUserData.username}} active{{/eq}}" href="/{{loggedInUserData.username}}"><img alt="Profile image for the user @{{ loggedInUserData.username}}" id="navbarProfileImage" src="{{#if loggedInUserData.imageEnabled}}/images/{{loggedInUserData.image}}{{else}}/images/cake.svg{{/if}}" {{#eq activePage loggedInUserData.username}}class="active"{{/eq}}/> <span class="screenreader-text"> Profile</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link{{#eq activePage 'communities'}} active{{/eq}}" href="/communities"><span class="navbar-icon-communities"></span><span class="screenreader-text"> Communities</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link{{#eq activePage 'search'}} active{{/eq}}" href="/search"><span class="navbar-icon-search"></span><span class="screenreader-text"> Search</span></a>
+          </li>
+        {{else}}
+          <li class="nav-item">
+            <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i><span class="nav-link-text not-hidden">log in</span></a>
+          </li>
+          <a href="/" id="sweetLogoLink">
+            <img src="/icons/bee-color.svg" id="sweetLogo" alt="sweet logo"/>
+          </a>
+          <li class="nav-item">
+            <a class="nav-link" href="/signup"><i class="fas fa-birthday-cake"></i> <span class="nav-link-text not-hidden">sign up</span></a>
+          </li>
+        {{/if}}
+      </ul>
 
-  <ul class="nav" id="navbarMenuDesktop" role="navigation">
-    {{#if loggedIn }}
-      <div class="navbar-group" id="navbarLeftGroup">
-        <li class="nav-item">
-          <a class="nav-link{{#eq activePage 'home'}} active{{/eq}}" href="/home"><span class="navbar-icon-home"></span><span class="nav-link-text">Home</span></a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" id="notificationsDropdownLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="navbar-icon-notifications"></span> <span class="notifications-count"></span><span class="nav-link-text">Notifications</span>
-          </a>
-          <div class="dropdown-menu py-0" aria-labelledby="notificationsDropdownLink">
-            <ul class="list-group list-group-flush" id="notificationsContainer"></ul>
-            <button type="button" class="button grey-button clear-all-notifications">Clear all notifications</button>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link{{#eq activePage 'communities'}} active{{/eq}}" href="/communities"><span class="navbar-icon-communities"></span><span class="nav-link-text">Communities</span></a>
-        </li>
-      </div>
-      <div class="navbar-group" id="navbarCentreGroup">
-        <a href="/" id="sweetLogoLink">
-          <img src="/icons/bee-color.svg" id="sweetLogo" alt="sweet logo"/>
-        </a>
-      </div>
-      <div class="navbar-group" id="navbarRightGroup">
-        <li class="nav-item dropdown">
-          <a class="nav-link {{#eq activePage loggedInUserData.username}}active{{/eq}} dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img alt="Profile image for the user @{{ loggedInUserData.username}}" id="navbarProfileImage" src="{{#if loggedInUserData.imageEnabled}}/images/{{loggedInUserData.image}}{{else}}/images/cake.svg{{/if}}" {{#eq activePage loggedInUserData.username}}class="active"{{/eq}}/> <span class="navbar-username">@{{loggedInUserData.username}}</span>
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown" id="userDropdownMenu">
-            <a class="dropdown-item" href="/{{loggedInUserData.username}}"><i class="fas fa-fw fa-user-circle"></i> profile</a>
-            <a class="dropdown-item" href="/settings"><i class="fas fa-fw fa-cog"></i> settings</a>
-            <!-- <a id="darkModeToggle" class="dropdown-item" href="#"><i class="fas fa-fw fa-moon"></i> dark mode</a> -->
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/support"><i class="fas fa-fw fa-question-circle"></i> support</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/logout"><i class="fas fa-fw fa-sign-out-alt"></i> log out</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a id="navbarSearchButton" class="nav-link{{#eq activePage 'search'}} active{{/eq}}" href="/search"><span class="navbar-icon-search"></span><span class="screenreader-text"> Search</span></a>
-        </li>
-        <input id="navbarSearchField" class="form-control" type="search" placeholder="Search" aria-label="Search" />
-      </div>
-    {{else}}
-        <div class="navbar-group" id="navbarLeftGroup">
+      <ul class="nav" id="navbarMenuDesktop" role="navigation">
+        {{#if loggedIn }}
+          <div class="navbar-group" id="navbarLeftGroup">
             <li class="nav-item">
-              <a class="nav-link" href="/"><img src="/icons/bee-color.svg" id="sweetLogo" alt="sweet logo"/> <span class="nav-link-text not-hidden navbar-site-title">sweet</span></a>
+              <a class="nav-link{{#eq activePage 'home'}} active{{/eq}}" href="/home"><span class="navbar-icon-home"></span><span class="nav-link-text">Home</span></a>
             </li>
-        </div>
-      <div class="navbar-group" id="navbarRightGroup">
-          <li class="nav-item">
-            <a class="nav-link nav-button" href="/login"><span class="nav-link-text not-hidden">log in</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link nav-button" href="/signup"><span class="nav-link-text not-hidden">sign up</span></a>
-          </li>
-      </div>
-    {{/if}}
-  </ul>
-</nav>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" id="notificationsDropdownLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="navbar-icon-notifications"></span> <span class="notifications-count"></span><span class="nav-link-text">Notifications</span>
+              </a>
+              <div class="dropdown-menu py-0" aria-labelledby="notificationsDropdownLink">
+                <ul class="list-group list-group-flush" id="notificationsContainer"></ul>
+                <button type="button" class="button grey-button clear-all-notifications">Clear all notifications</button>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link{{#eq activePage 'communities'}} active{{/eq}}" href="/communities"><span class="navbar-icon-communities"></span><span class="nav-link-text">Communities</span></a>
+            </li>
+          </div>
+          <div class="navbar-group" id="navbarCentreGroup">
+            <a href="/" id="sweetLogoLink">
+              <img src="/icons/bee-color.svg" id="sweetLogo" alt="sweet logo"/>
+            </a>
+          </div>
+          <div class="navbar-group" id="navbarRightGroup">
+            <li class="nav-item dropdown">
+              <a class="nav-link {{#eq activePage loggedInUserData.username}}active{{/eq}} dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <img alt="Profile image for the user @{{ loggedInUserData.username}}" id="navbarProfileImage" src="{{#if loggedInUserData.imageEnabled}}/images/{{loggedInUserData.image}}{{else}}/images/cake.svg{{/if}}" {{#eq activePage loggedInUserData.username}}class="active"{{/eq}}/> <span class="navbar-username">@{{loggedInUserData.username}}</span>
+              </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown" id="userDropdownMenu">
+                <a class="dropdown-item" href="/{{loggedInUserData.username}}"><i class="fas fa-fw fa-user-circle"></i> profile</a>
+                <a class="dropdown-item" href="/settings"><i class="fas fa-fw fa-cog"></i> settings</a>
+                <!-- <a id="darkModeToggle" class="dropdown-item" href="#"><i class="fas fa-fw fa-moon"></i> dark mode</a> -->
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="/support"><i class="fas fa-fw fa-question-circle"></i> support</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="/logout"><i class="fas fa-fw fa-sign-out-alt"></i> log out</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a id="navbarSearchButton" class="nav-link{{#eq activePage 'search'}} active{{/eq}}" href="/search"><span class="navbar-icon-search"></span><span class="screenreader-text"> Search</span></a>
+            </li>
+            <input id="navbarSearchField" class="form-control" type="search" placeholder="Search" aria-label="Search" />
+          </div>
+        {{else}}
+            <div class="navbar-group" id="navbarLeftGroup">
+                <li class="nav-item">
+                  <a class="nav-link" href="/"><img src="/icons/bee-color.svg" id="sweetLogo" alt="sweet logo"/> <span class="nav-link-text not-hidden navbar-site-title">sweet</span></a>
+                </li>
+            </div>
+          <div class="navbar-group" id="navbarRightGroup">
+              <li class="nav-item">
+                <a class="nav-link nav-button" href="/login"><span class="nav-link-text not-hidden">log in</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-button" href="/signup"><span class="nav-link-text not-hidden">sign up</span></a>
+              </li>
+          </div>
+        {{/if}}
+      </ul>
+    </nav>
+</div>
