Under advisement the experimental toolbar's reign is no more

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -105,6 +105,10 @@ select {
     &.outline-button {
         color: $darkest-grey;
         background-color: $light-grey;
+        &:hover {
+            background: $dark-grey;
+            color: $background-white;
+        }
     }
 }
 
