--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -23,7 +23,7 @@
             <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i><span class="nav-link-text not-hidden">log in</span></a>
           </li>
           <a href="/" id="sweetLogoLink">
-            <img src="/icons/bee-color.svg" id="sweetLogo" alt="sweet logo"/>
+            <img src="/icons/bee.svg" id="sweetLogo" alt="sweet logo"/>
           </a>
           <li class="nav-item">
             <a class="nav-link" href="/signup"><i class="fas fa-birthday-cake"></i> <span class="nav-link-text not-hidden">sign up</span></a>
@@ -52,7 +52,7 @@
           </div>
           <div class="navbar-group" id="navbarCentreGroup">
             <a href="/" id="sweetLogoLink">
-              <img src="/icons/bee-color.svg" id="sweetLogo" alt="sweet logo"/>
+              <img src="/icons/bee.svg" id="sweetLogo" alt="sweet logo"/>
             </a>
           </div>
           <div class="navbar-group" id="navbarRightGroup">
@@ -78,7 +78,7 @@
         {{else}}
             <div class="navbar-group" id="navbarLeftGroup">
                 <li class="nav-item">
-                  <a class="nav-link" href="/"><img src="/icons/bee-color.svg" id="sweetLogo" alt="sweet logo"/> <span class="nav-link-text not-hidden navbar-site-title">sweet</span></a>
+                  <a class="nav-link" href="/"><img src="/icons/bee.svg" id="sweetLogo" alt="sweet logo"/> <span class="nav-link-text not-hidden navbar-site-title">sweet</span></a>
                 </li>
             </div>
           <div class="navbar-group" id="navbarRightGroup">
