Fixed bug where emoji pickers wouldn't appear for comments

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -195,11 +195,6 @@ button.close {
     /* Given the overflow hidden above, this allows the selected glow to show properly */
 }
 
-.new-comment-form .link-form-cont {
-    margin: 0 -6px;
-    /* Gotta sort this out at some point */
-}
-
 .linkPreviewAddingForm {
     display: flex;
     flex-direction: row;
@@ -259,7 +254,8 @@ button.close {
     cursor: default;
     flex-direction: row;
     justify-content: flex-start;
-    border: 1px solid $light-grey;
+    border: 1px solid $medium-grey;
+    background: $element-background;
     padding: 5px;
     border-radius: 6px;
     display: flex;
@@ -275,6 +271,7 @@ button.close {
 
 .add-emoji:hover {
     border-color: $medium-grey;
+    transform: scale(1.2);
 }
 
 @media (max-width: 575.98px) {
