Apply change editor border on focus to dynamic elements

--- a/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
+++ b/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
@@ -32,9 +32,13 @@ $(function(){
     if(e.target.parentElement.id == "editor"){
       $(".post-controls").css('display', 'flex');
     }
-    $(this).closest('.editable-text').addClass('focused');
-  }).focusout(function (e) {
-    $(this).closest('.editable-text').removeClass('focused');
+  })
+
+  $('body').on('focus', '.ql-editor', function(e) {
+      $(this).closest('.editable-text').addClass('focused');
+  })
+  $('body').on('focusout', '.ql-editor', function(e) {
+      $(this).closest('.editable-text').removeClass('focused');
   })
 
   $("#postContentWarningsButton").click(function () {
