--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -17,7 +17,7 @@ textarea {
     padding: 0.55rem;
     border-radius: 3px;
     border: 1px solid $medium-grey;
-    background: $lightest-grey;
+    background: $editor-background;
 
     @include transition;
 
@@ -348,7 +348,7 @@ button.close {
     margin-right: -1px;
     margin-bottom: 0;
     transition: all 0.1s ease-in-out;
-    background-color: $lightest-grey;
+    background-color: $editor-background;
     color: rgba(0, 0, 0, 0.6);
     border: 1px solid rgba(0, 0, 0, 0.2);
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.1);
@@ -463,7 +463,7 @@ button.close {
     background-position: center;
     background-repeat: no-repeat;
     background-image: url("/images/imagePreviewWindowDefault.jpg");
-    background-color: $lightest-grey;
+    background-color: $editor-background;
     border: 1px dashed $medium-grey;
     margin: 0;
     object-fit: contain;
